@@ -1,9 +1,8 @@
-package homework1.task2.test;
+package ru.aston.hometask.one.task2.test;
 
-import homework1.task2.Book;
-import homework1.task2.Student;
+import ru.aston.hometask.one.task2.Book;
+import ru.aston.hometask.one.task2.Student;
 
-import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 
@@ -28,7 +27,7 @@ public class StreamTest {
     }
 
     private static List<Student> getStudents() {
-        List<Book> books1 = Arrays.asList(
+        List<Book> books1 = List.of(
                 new Book("Java. Эффективное программирование", "Джошуа Блох", 2018, 416),
                 new Book("Чистый код", "Роберт Мартин", 2008, 464),
                 new Book("Java. Конкурентность на практике", "Брайан Гетц", 2006, 424),
@@ -36,7 +35,7 @@ public class StreamTest {
                 new Book("Шаблоны корпоративных приложений", "Мартин Фаулер", 2002, 560)
         );
 
-        List<Book> books2 = Arrays.asList(
+        List<Book> books2 = List.of(
                 new Book("Рефакторинг. Улучшение существующего кода", "Мартин Фаулер", 2019, 448),
                 new Book("Чистая архитектура", "Роберт Мартин", 2017, 432),
                 new Book("Паттерны проектирования", "Э. Фримен, Э. Фримен", 2004, 694),
@@ -44,15 +43,15 @@ public class StreamTest {
                 new Book("Java. Эффективное программирование", "Джошуа Блох", 2018, 416)
         );
 
-        List<Book> books3 = Arrays.asList(
+        List<Book> books3 = List.of(
                 new Book("Проектирование данных-интенсивных приложений", "Мартин Клеппман", 2017, 616),
                 new Book("Практичный программист", "Эндрю Хант, Дэвид Томас", 1999, 352),
-                new Book("Чистый код", "Роберт Мартин", 2008, 464), // дубликат
+                new Book("Чистый код", "Роберт Мартин", 2008, 464),
                 new Book("Выпускайте! Надёжные приложения", "Майкл Нигард", 2018, 350),
                 new Book("Эффективная работа с унаследованным кодом", "Майкл Физерс", 2004, 456)
         );
 
-        return Arrays.asList(
+        return List.of(
                 new Student("Alisa", books1),
                 new Student("Dima", books2),
                 new Student("Artur", books3)
